substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_runtime_types_derive.stderr
error: Missing `#[frame::derive]`
  --> tests/construct_runtime_v2_ui/missing_runtime_types_derive.rs:19:1
   |
19 | mod runtime {
   | ^^^
